--- a/HelloWorldApp/Base.lproj/Main.storyboard
+++ b/HelloWorldApp/Base.lproj/Main.storyboard
@@ -16,53 +16,53 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="68" translatesAutoresizingMaskIntoConstraints="NO" id="MaN-4C-OZg">
-                                <rect key="frame" x="142" y="138" width="130" height="615"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iJ6-RS-0fY">
+                                <rect key="frame" x="183.5" y="811" width="47.5" height="22.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="7"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button">
+                                    <fontDescription key="titleFontDescription" type="system" pointSize="7"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="switchColorButton" destination="BYZ-38-t0r" eventType="touchUpInside" id="Efs-bw-A0e"/>
+                                </connections>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="i1Q-Xf-GOb">
+                                <rect key="frame" x="142" y="72" width="130" height="490"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z4g-MX-o4E">
                                         <rect key="frame" x="0.0" y="0.0" width="130" height="130"/>
                                         <color key="backgroundColor" systemColor="systemRedColor"/>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pxb-ub-Bfq">
-                                        <rect key="frame" x="0.0" y="198" width="130" height="130"/>
+                                        <rect key="frame" x="0.0" y="180" width="130" height="130"/>
                                         <color key="backgroundColor" systemColor="systemYellowColor"/>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8KI-IT-UJr">
-                                        <rect key="frame" x="0.0" y="396" width="130" height="130"/>
+                                        <rect key="frame" x="0.0" y="360" width="130" height="130"/>
                                         <color key="backgroundColor" systemColor="systemGreenColor"/>
                                     </view>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iJ6-RS-0fY">
-                                        <rect key="frame" x="0.0" y="594" width="130" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="7"/>
-                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                        <state key="normal" title="Button"/>
-                                        <connections>
-                                            <action selector="switchColorButton" destination="BYZ-38-t0r" eventType="touchUpInside" id="Efs-bw-A0e"/>
-                                        </connections>
-                                    </button>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="Pxb-ub-Bfq" firstAttribute="leading" secondItem="MaN-4C-OZg" secondAttribute="leading" id="6GC-WC-4jl"/>
-                                    <constraint firstItem="8KI-IT-UJr" firstAttribute="top" secondItem="Pxb-ub-Bfq" secondAttribute="bottom" constant="68" id="87a-LR-CzJ"/>
-                                    <constraint firstItem="8KI-IT-UJr" firstAttribute="leading" secondItem="MaN-4C-OZg" secondAttribute="leading" id="9if-7B-cK0"/>
-                                    <constraint firstAttribute="trailing" secondItem="Z4g-MX-o4E" secondAttribute="trailing" id="FXh-TL-UMH"/>
-                                    <constraint firstItem="Pxb-ub-Bfq" firstAttribute="top" secondItem="Z4g-MX-o4E" secondAttribute="bottom" constant="68" id="OGX-eo-AJv"/>
-                                    <constraint firstAttribute="trailing" secondItem="8KI-IT-UJr" secondAttribute="trailing" id="Qh8-dh-UKy"/>
-                                    <constraint firstAttribute="trailing" secondItem="Pxb-ub-Bfq" secondAttribute="trailing" id="fFV-lV-kdI"/>
-                                    <constraint firstItem="Z4g-MX-o4E" firstAttribute="top" secondItem="MaN-4C-OZg" secondAttribute="top" id="jpS-fE-aDr"/>
-                                    <constraint firstItem="Pxb-ub-Bfq" firstAttribute="height" secondItem="Z4g-MX-o4E" secondAttribute="height" id="mMb-El-0xY"/>
-                                    <constraint firstItem="8KI-IT-UJr" firstAttribute="height" secondItem="Pxb-ub-Bfq" secondAttribute="height" id="nWy-mf-sW5"/>
-                                    <constraint firstItem="Z4g-MX-o4E" firstAttribute="leading" secondItem="MaN-4C-OZg" secondAttribute="leading" id="xEi-FL-4z8"/>
+                                    <constraint firstItem="8KI-IT-UJr" firstAttribute="centerX" secondItem="i1Q-Xf-GOb" secondAttribute="centerX" id="FRM-aT-Lim"/>
+                                    <constraint firstItem="Z4g-MX-o4E" firstAttribute="centerX" secondItem="i1Q-Xf-GOb" secondAttribute="centerX" id="KbG-jQ-h9M"/>
+                                    <constraint firstItem="Z4g-MX-o4E" firstAttribute="top" secondItem="i1Q-Xf-GOb" secondAttribute="top" id="cu7-G6-b8s"/>
+                                    <constraint firstItem="Pxb-ub-Bfq" firstAttribute="top" secondItem="i1Q-Xf-GOb" secondAttribute="top" constant="180" id="nD2-1W-TW2"/>
+                                    <constraint firstItem="Pxb-ub-Bfq" firstAttribute="centerX" secondItem="i1Q-Xf-GOb" secondAttribute="centerX" id="utf-tQ-Bed"/>
+                                    <constraint firstItem="8KI-IT-UJr" firstAttribute="top" secondItem="i1Q-Xf-GOb" secondAttribute="top" constant="360" id="yFW-rf-tzE"/>
                                 </constraints>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="tertiarySystemGroupedBackgroundColor"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="MaN-4C-OZg" secondAttribute="bottom" constant="109" id="A5f-hi-ElR"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="MaN-4C-OZg" secondAttribute="trailing" constant="142" id="MIn-eT-vUZ"/>
-                            <constraint firstItem="MaN-4C-OZg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="94" id="SJh-VS-gEa"/>
-                            <constraint firstItem="MaN-4C-OZg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="142" id="bBj-2x-Bn8"/>
+                            <constraint firstItem="i1Q-Xf-GOb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="142" id="Izs-Pg-Vzy"/>
+                            <constraint firstItem="iJ6-RS-0fY" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="TPI-Ym-Ys4"/>
+                            <constraint firstItem="i1Q-Xf-GOb" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="28" id="Usu-ow-xXF"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="iJ6-RS-0fY" secondAttribute="bottom" constant="28.5" id="glg-ER-mN3"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="i1Q-Xf-GOb" secondAttribute="bottom" constant="300" id="uJi-wd-4YR"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="i1Q-Xf-GOb" secondAttribute="trailing" constant="142" id="udi-Q8-yc9"/>
                         </constraints>
                     </view>
                     <connections>
@@ -86,9 +86,6 @@
         </systemColor>
         <systemColor name="systemYellowColor">
             <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="tertiarySystemGroupedBackgroundColor">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
