--- a/HelloWorldApp/Base.lproj/Main.storyboard
+++ b/HelloWorldApp/Base.lproj/Main.storyboard
@@ -16,8 +16,42 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="i1Q-Xf-GOb">
+                                <rect key="frame" x="142" y="54" width="130" height="490"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z4g-MX-o4E">
+                                        <rect key="frame" x="0.0" y="0.0" width="130" height="130"/>
+                                        <color key="backgroundColor" systemColor="systemRedColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="130" id="JiF-wl-dZs"/>
+                                            <constraint firstAttribute="width" constant="130" id="hdt-8b-Zq0"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pxb-ub-Bfq">
+                                        <rect key="frame" x="0.0" y="180" width="130" height="130"/>
+                                        <color key="backgroundColor" systemColor="systemYellowColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="130" id="bxf-Pq-XJW"/>
+                                            <constraint firstAttribute="width" constant="130" id="cRk-3T-cZP"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8KI-IT-UJr">
+                                        <rect key="frame" x="0.0" y="360" width="130" height="130"/>
+                                        <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="130" id="Eg1-R0-VKl"/>
+                                            <constraint firstAttribute="height" constant="130" id="wIo-Jh-oPg"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="8KI-IT-UJr" firstAttribute="centerX" secondItem="i1Q-Xf-GOb" secondAttribute="centerX" id="FRM-aT-Lim"/>
+                                    <constraint firstItem="Z4g-MX-o4E" firstAttribute="centerX" secondItem="i1Q-Xf-GOb" secondAttribute="centerX" id="KbG-jQ-h9M"/>
+                                    <constraint firstItem="Pxb-ub-Bfq" firstAttribute="centerX" secondItem="i1Q-Xf-GOb" secondAttribute="centerX" id="utf-tQ-Bed"/>
+                                </constraints>
+                            </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iJ6-RS-0fY">
-                                <rect key="frame" x="183.5" y="811" width="47.5" height="22.5"/>
+                                <rect key="frame" x="183.5" y="616" width="47.5" height="22.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="7"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="Button"/>
@@ -28,41 +62,14 @@
                                     <action selector="switchColorButton" destination="BYZ-38-t0r" eventType="touchUpInside" id="Efs-bw-A0e"/>
                                 </connections>
                             </button>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="i1Q-Xf-GOb">
-                                <rect key="frame" x="142" y="72" width="130" height="490"/>
-                                <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z4g-MX-o4E">
-                                        <rect key="frame" x="0.0" y="0.0" width="130" height="130"/>
-                                        <color key="backgroundColor" systemColor="systemRedColor"/>
-                                    </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pxb-ub-Bfq">
-                                        <rect key="frame" x="0.0" y="180" width="130" height="130"/>
-                                        <color key="backgroundColor" systemColor="systemYellowColor"/>
-                                    </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8KI-IT-UJr">
-                                        <rect key="frame" x="0.0" y="360" width="130" height="130"/>
-                                        <color key="backgroundColor" systemColor="systemGreenColor"/>
-                                    </view>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="8KI-IT-UJr" firstAttribute="centerX" secondItem="i1Q-Xf-GOb" secondAttribute="centerX" id="FRM-aT-Lim"/>
-                                    <constraint firstItem="Z4g-MX-o4E" firstAttribute="centerX" secondItem="i1Q-Xf-GOb" secondAttribute="centerX" id="KbG-jQ-h9M"/>
-                                    <constraint firstItem="Z4g-MX-o4E" firstAttribute="top" secondItem="i1Q-Xf-GOb" secondAttribute="top" id="cu7-G6-b8s"/>
-                                    <constraint firstItem="Pxb-ub-Bfq" firstAttribute="top" secondItem="i1Q-Xf-GOb" secondAttribute="top" constant="180" id="nD2-1W-TW2"/>
-                                    <constraint firstItem="Pxb-ub-Bfq" firstAttribute="centerX" secondItem="i1Q-Xf-GOb" secondAttribute="centerX" id="utf-tQ-Bed"/>
-                                    <constraint firstItem="8KI-IT-UJr" firstAttribute="top" secondItem="i1Q-Xf-GOb" secondAttribute="top" constant="360" id="yFW-rf-tzE"/>
-                                </constraints>
-                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="i1Q-Xf-GOb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="142" id="Izs-Pg-Vzy"/>
+                            <constraint firstItem="i1Q-Xf-GOb" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="M4e-vU-Zpj"/>
                             <constraint firstItem="iJ6-RS-0fY" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="TPI-Ym-Ys4"/>
-                            <constraint firstItem="i1Q-Xf-GOb" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="28" id="Usu-ow-xXF"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="iJ6-RS-0fY" secondAttribute="bottom" constant="28.5" id="glg-ER-mN3"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="i1Q-Xf-GOb" secondAttribute="bottom" constant="300" id="uJi-wd-4YR"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="i1Q-Xf-GOb" secondAttribute="trailing" constant="142" id="udi-Q8-yc9"/>
+                            <constraint firstItem="i1Q-Xf-GOb" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="YDT-E7-ZGn"/>
+                            <constraint firstItem="iJ6-RS-0fY" firstAttribute="top" secondItem="i1Q-Xf-GOb" secondAttribute="bottom" constant="72" id="w30-54-Cdb"/>
                         </constraints>
                     </view>
                     <connections>
