--- a/HelloWorldApp/Base.lproj/Main.storyboard
+++ b/HelloWorldApp/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_7" orientation="portrait" appearance="light"/>
+    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -8,40 +8,143 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="HelloWorldApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="HelloWorldApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QVj-8A-qlX">
-                                <rect key="frame" x="20" y="54" width="388" height="410"/>
-                                <color key="backgroundColor" red="0.56421913260000001" green="0.76942896839999997" blue="0.76048433729999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qsq-8W-HqY">
-                                <rect key="frame" x="20" y="482" width="388" height="410"/>
-                                <color key="backgroundColor" red="0.86078917980000003" green="0.79418157990000005" blue="0.72118292890000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                            </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="vyh-wm-B19">
+                                <rect key="frame" x="30" y="148" width="260" height="84"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="m7X-Zk-LL0">
+                                        <rect key="frame" x="0.0" y="0.0" width="260" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" smartInsertDeleteType="no"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="GfD-3P-Ofg">
+                                        <rect key="frame" x="0.0" y="50" width="260" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" secureTextEntry="YES" smartInsertDeleteType="no"/>
+                                    </textField>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2iS-yC-QdU">
+                                <rect key="frame" x="134" y="269" width="52" height="35"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Log In"/>
+                                <connections>
+                                    <action selector="logInButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="BUN-zG-st4"/>
+                                    <segue destination="hL2-MN-yeU" kind="presentation" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="Qij-yF-i5N"/>
+                                </connections>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="49" translatesAutoresizingMaskIntoConstraints="NO" id="Urt-ro-duo">
+                                <rect key="frame" x="30" y="312" width="260" height="27"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JmV-5w-vwh">
+                                        <rect key="frame" x="0.0" y="0.0" width="110" height="27"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="Forgot User Name?"/>
+                                        <connections>
+                                            <action selector="forgotNameButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="9F8-WJ-hsR"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m0d-3v-iA8">
+                                        <rect key="frame" x="159" y="0.0" width="101" height="27"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="Forgot Password?"/>
+                                        <connections>
+                                            <action selector="forgotPasswordButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="QyO-b2-rQo"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="m0d-3v-iA8" firstAttribute="width" secondItem="JmV-5w-vwh" secondAttribute="width" multiplier="0.918182" id="jH6-OA-kd5"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="qsq-8W-HqY" secondAttribute="trailing" constant="20" id="0wq-lP-wH9"/>
-                            <constraint firstItem="QVj-8A-qlX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="CIW-b0-Zma"/>
-                            <constraint firstItem="qsq-8W-HqY" firstAttribute="top" secondItem="QVj-8A-qlX" secondAttribute="bottom" constant="18" id="K6u-aj-c27"/>
-                            <constraint firstItem="qsq-8W-HqY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="eWa-Y0-z9d"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="qsq-8W-HqY" secondAttribute="bottom" id="gWA-3w-ohL"/>
-                            <constraint firstItem="QVj-8A-qlX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="gpu-qd-fUl"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="QVj-8A-qlX" secondAttribute="trailing" constant="20" id="lVr-1K-Hil"/>
-                            <constraint firstItem="qsq-8W-HqY" firstAttribute="height" secondItem="QVj-8A-qlX" secondAttribute="height" id="uBO-sE-E77"/>
+                            <constraint firstItem="vyh-wm-B19" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.8125" id="0IO-WP-JtK"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Urt-ro-duo" secondAttribute="trailing" constant="30" id="0ri-Pi-G5I"/>
+                            <constraint firstItem="vyh-wm-B19" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="148" id="MOM-8X-ObW"/>
+                            <constraint firstItem="vyh-wm-B19" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Tv0-dW-N1E"/>
+                            <constraint firstItem="Urt-ro-duo" firstAttribute="top" secondItem="2iS-yC-QdU" secondAttribute="bottom" constant="8" symbolic="YES" id="dQt-Vq-no7"/>
+                            <constraint firstItem="Urt-ro-duo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="dou-j0-1Us"/>
+                            <constraint firstItem="2iS-yC-QdU" firstAttribute="top" secondItem="vyh-wm-B19" secondAttribute="bottom" constant="37" id="f4G-aZ-vhg"/>
+                            <constraint firstItem="2iS-yC-QdU" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="noU-Qh-ltM"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="passwordTF" destination="GfD-3P-Ofg" id="bMB-ru-7WY"/>
+                        <outlet property="userNameTF" destination="m7X-Zk-LL0" id="cuA-29-I0Y"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-687" y="34"/>
+            <point key="canvasLocation" x="-2889.375" y="48.591549295774648"/>
+        </scene>
+        <!--Welcome View Controller-->
+        <scene sceneID="2ix-eL-FGX">
+            <objects>
+                <viewController id="hL2-MN-yeU" customClass="WelcomeViewController" customModule="HelloWorldApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Tg4-gM-PmZ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome, " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RTO-Yr-Uyx">
+                                <rect key="frame" x="16" y="137" width="288" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HtK-Aw-u4e">
+                                <rect key="frame" x="16" y="415" width="288" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Log out">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="logOutButtonPressed" destination="hL2-MN-yeU" eventType="touchUpInside" id="QgU-ZQ-GkG"/>
+                                    <segue destination="NM9-Rv-g8e" kind="unwind" unwindAction="unwindSegue:" id="DkA-SO-nKF"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="👋" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fA3-7V-cFk">
+                                <rect key="frame" x="16" y="180" width="288" height="50"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="42"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="iYB-97-1it"/>
+                        <color key="backgroundColor" red="0.75492849880638291" green="0.53837990770851607" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="fA3-7V-cFk" firstAttribute="top" secondItem="RTO-Yr-Uyx" secondAttribute="bottom" constant="19" id="1tk-IW-Vsl"/>
+                            <constraint firstItem="iYB-97-1it" firstAttribute="trailing" secondItem="HtK-Aw-u4e" secondAttribute="trailing" constant="16" id="3ch-NW-wcG"/>
+                            <constraint firstItem="fA3-7V-cFk" firstAttribute="leading" secondItem="iYB-97-1it" secondAttribute="leading" constant="16" id="CAL-9v-Y0y"/>
+                            <constraint firstItem="iYB-97-1it" firstAttribute="trailing" secondItem="fA3-7V-cFk" secondAttribute="trailing" constant="16" id="NbJ-iq-iYH"/>
+                            <constraint firstItem="HtK-Aw-u4e" firstAttribute="leading" secondItem="iYB-97-1it" secondAttribute="leading" constant="16" id="SEB-ez-EGg"/>
+                            <constraint firstItem="iYB-97-1it" firstAttribute="bottom" secondItem="HtK-Aw-u4e" secondAttribute="bottom" constant="119" id="VQ7-nR-MGQ"/>
+                            <constraint firstItem="iYB-97-1it" firstAttribute="trailing" secondItem="RTO-Yr-Uyx" secondAttribute="trailing" constant="16" id="VZx-rd-ama"/>
+                            <constraint firstItem="RTO-Yr-Uyx" firstAttribute="top" secondItem="iYB-97-1it" secondAttribute="top" constant="137" id="Xza-4J-IM3"/>
+                            <constraint firstItem="RTO-Yr-Uyx" firstAttribute="leading" secondItem="iYB-97-1it" secondAttribute="leading" constant="16" id="Y8m-vG-rSJ"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="welcomeLabel" destination="RTO-Yr-Uyx" id="uGU-8U-OCS"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oR2-QS-MS3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="NM9-Rv-g8e" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="-2079" y="49"/>
         </scene>
     </scenes>
     <resources>
